# awesome-simple-engine

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  asengine.default.config.json  build.config.json  build.py  build.sh  clean.sh  generate_foreach_macro.py  headers.json  hello_triangle.sh  install_emsdk.sh  log.txt  run-linux.sh  run-win.sh  run.sh  run_demo.sh  settings.gradle  setup.py  setup.sh  update_shaders.py  viewport_example.sh
asengine/: .gitattributes  .gitignore  CMakeLists.txt  build.py  generate_foreach_macro.py
asengine/.Audio/: AudioEngine.h
asengine/.Resource/: Material.h  OldResourceManager.h  ResourceCollection.h  ResourceManager.h
asengine/2D/: Module2D.cpp  Module2D.h
asengine/2D/Camera2D/: Camera2D.cpp  Camera2D.h
asengine/2D/Font/: Font.cpp  Font.h
asengine/2D/Layer2D/: Layer2D.cpp  Layer2D.h
asengine/2D/Quad2D/: Quad2D.cpp  Quad2D.h  Vertex2D.h
asengine/2D/Renderer2D/: Renderer2D.cpp  Renderer2D.h
asengine/2D/Sprite/: Sprite.cpp  Sprite.h
asengine/2D/Transform2D/: Transform2D.cpp  Transform2D.h
asengine/API/: API.h
asengine/Animation/: Interpolation.cpp  Interpolation.h
asengine/Audio/: AudioModule.cpp  AudioModule.h
asengine/Audio/AudioEngine/: AudioEngine.cpp  AudioEngine.h
asengine/Audio/AudioOutput/: AudioOutput.cpp  AudioOutput.h
asengine/Audio/AudioPlayer/: AudioPlayer.cpp  AudioPlayer.h
asengine/Audio/AudioSource/: AudioSource.cpp  AudioSource.h
asengine/Class/: Class.h  ClassManager.cpp  ClassManager.h  Object.h
asengine/Core/ASEngine/: ASEngine.cpp  ASEngine.h
asengine/Core/Collection/: Collection.h
asengine/Core/Debug/: Debug.cpp  Debug.h  DebugAndroid.cpp
asengine/Core/Error/: Assertion.cpp  Assertion.h  Exception.cpp  Exception.h
asengine/Core/FileSystem/: File.cpp  File.h  FileDesktop.cpp
asengine/Core/InputSystem/: InputEvent.cpp  InputEvent.h  InputSystem.h  Keycodes.h
asengine/Core/Math/: Column.h  Math.h  Matrix.h  Matrix3x3.cpp  Matrix3x3.h  Matrix4x4.cpp  Matrix4x4.h  MatrixSerialiazation.h  Quaternion.cpp  Quaternion.h  Random.cpp  Random.h  SquareMatrix.h  Vector2.cpp  Vector2.h  Vector3.cpp  Vector3.h
asengine/Core/Memory/: ByteBuffer.cpp  ByteBuffer.h  ChunkID.h  MallocAllocator.h  PoolAllocator.cpp  PoolAllocator.h  PoolAllocatorPage.h
asengine/Core/Registry/: Registry.h
asengine/Core/Serialization/: Json.h  SerializeEnum.h  SerializeStruct.h  Serializer.cpp  Serializer.h
asengine/Core/Settings/: Settings.cpp  Settings.h
asengine/Core/Signal/: Signal.h
asengine/Core/Singleton/: Singleton.h
asengine/Core/String/: UniqueString.cpp  UniqueString.h  UniqueStringManager.cpp  UniqueStringManager.h
asengine/Core/Time/: Time.h
asengine/Core/Window/: Window.h
asengine/Display/: Display.cpp  Display.h
asengine/ECS/: Archetype.cpp  Archetype.h  ArchetypeManager.cpp  ArchetypeManager.h  Component.h  ComponentClass.cpp  ComponentClass.h  ComponentCollection.h  ComponentManager.cpp  ComponentManager.h  Entity.h  EntityBuilder.cpp  EntityBuilder.h  EntityData.h  EntityManager.cpp  EntityManager.h  EntityQuery.h  Signature.h  System.h  SystemManager.cpp  SystemManager.h
asengine/Macros/: Foreach.h
asengine/Module/: Module.h  ModuleManager.cpp  ModuleManager.h
asengine/Object/: Class.cpp  Class.h  ClassManager.cpp  ClassManager.h  IObject.h  Object.h  TClass.h  TObject.h
asengine/Renderer/: Color.cpp  Color.h  Image.cpp  Image.h  Renderer.cpp  Renderer.h  VertexInput.h
asengine/Renderer/.OLD/: GraphicsAPI.h  Renderer.cpp  Renderer.h  Viewport.h
asengine/Renderer/Backend/: RendererBackend.cpp  RendererBackend.h
asengine/Renderer/Buffer/: Buffer.cpp  Buffer.h
asengine/Renderer/Material/: Material.cpp  Material.h
asengine/Renderer/Shader/: Shader.cpp  Shader.h  ShaderParams.cpp  ShaderParams.h  ShaderProgram.h  ShaderSource.cpp  ShaderSource.h
asengine/Renderer/Texture/: Image.cpp  Image.h  Texture.cpp  Texture.h
asengine/Renderer/VertexInput/: VertexInput.cpp  VertexInput.h  VertexInputDescriptor.cpp  VertexInputDescriptor.h
asengine/Renderer/Viewport/: Viewport.cpp  Viewport.h
asengine/Resource/: AbstractResource.cpp  AbstractResource.h  IResourceClass.cpp  IResourceClass.h  Resource.cpp  Resource.h  ResourceClass.h  ResourceDefinition.h  ResourceID.h  ResourceManager.cpp  ResourceManager.h  ResourceRef.h  ResourceRefSerialization.h  ResourceSerialization.h
asengine/Resource/.ResourceTypes/: Audio.h  Scene.cpp  Scene.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h
asengine/Scene/: Scene.cpp  Scene.h  SceneManager.cpp  SceneManager.h
asengine/UnitTest/: UnitTest.cpp  UnitTest.h  UnitTestSystem.cpp  UnitTestSystem.h
asengine/Window/: Window.cpp  Window.h
asengine/dependencies/SPIRV-Cross/: CMakeLists.txt  LICENSE
asengine/dependencies/glslang/: CMakeLists.txt
asengine/dependencies/miniaudio/: CMakeLists.txt  miniaudio.c
asengine/engine/: asengine.h
asengine/engine/.Renderer/: Image.cpp  Image.h  Renderer.h
asengine/engine/.Resource/: Audio.cpp  Audio.h  Material.cpp  Resource.h  ResourceManager.cpp  Scene.cpp  Shader.cpp  Shader.h
asengine/engine/Application/: Application.cpp  Application.h
asengine/engine/Audio/: AudioEngine.cpp  AudioEngine.h
asengine/engine/ECS/: Archetype.cpp  Archetype.h  ArchetypeManager.cpp  ArchetypeManager.h  Component.h  ComponentCollection.h  ComponentColllection.h  ComponentManager.cpp  Entity.h  (+12 more)
engine/: CMakeLists.txt  asengine.h  log.h
engine/Application/: Application.cpp  Application.h
engine/GameObject/: GameObject.cpp  Instance.cpp  Instance.h
engine/InputEvent/: InputEvent.cpp  InputEvent.h
engine/Interpolation/: Interpolate.h
engine/Log/: Log.cpp  LogAndroid.cpp  LogDesktop.cpp
engine/Particles/: ParticleEmitter.h
engine/Renderer/: Context.h  Graphics.h  Quad.cpp  Quad.h  Renderer.h  Texture.cpp  Texture.h  Vertex.h  VertexBufferObject.cpp  VertexBufferObject.h
engine/Resource/: Font.cpp  Font.h  Image.cpp  Image.h  Material.cpp  Material.h  Resource.cpp  Resource.h  Scene.cpp  Scene.h  Sprite.cpp  Sprite.h
tests/src/: CMakeLists.txt  registry.cpp  registry.h
(+553 files in other folders)
